# wireHHHQ

./: pyproject.toml
backend/: pyproject.toml
backend/wireHHHQ/: manage.py
backend/wireHHHQ/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/wireHHHQ/core/migrations/: 0001_initial.py  0002_remove_project_client_remove_project_lot_block_and_more.py  0003_alter_project_client_name_alter_project_project_name.py  0004_alter_wiresku_cost_per_foot.py  0005_wiresku_sku_desc.py  0006_alter_wirebox_disposed_date_and_more.py  0007_alter_wirebox_purchase_cost_and_more.py
backend/wireHHHQ/core/templates/admin/core/: projects_change_list.html  wireboxes_change_list.html  wiretypes_change_list.html  wireusage_change_list.html
backend/wireHHHQ/wireHHHQ/: asgi.py  settings.py  wsgi.py
frontend/wirehhhq-frontend/: index.html  package-lock.json  package.json
wireHHHQ/core/: models.py
wireHHHQ/wireHHHQ/: settings.py  urls.py
